# aidchain

./: .wallets.env  App.tsx  DATA_UPDATE_FIXES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICK_REFERENCE.md  index.html  metadata.json  package-lock.json  package.json  test-simple.js  types.ts  wallets.json
.github/workflows/: main.yml
backend/: package-lock.json  package.json
backend/src/: app.js  db.js  server.js
backend/src/controllers/: authController.js  campaignController.js
backend/src/middleware/: authMiddleware.js
backend/src/models/: campaign.js
backend/src/routes/: authRoutes.js  campaignRoutes.js  campaigns.js
backend/src/services/: authService.js  campaignService.js  txSigner.js
backend/src/utils/: logger.js
components/: CampaignCard.tsx  CodeBlock.tsx  CreateCampaignModal.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  Pagination.tsx  Toast.tsx  WalletModal.tsx
contracts/: AidChain.hs  NftPolicy.hs  aidchain.cabal  cabal.project
data/: mockData.ts  projectSources.ts
keys/: admin-payment.skey  admin-payment.vkey  admin-stake.skey  admin-stake.vkey  contributor-payment.skey  contributor-payment.vkey  contributor-stake.skey  contributor-stake.vkey  creator-payment.skey  creator-payment.vkey  creator-stake.skey  creator-stake.vkey
pages/: Codebase.tsx  Dashboard.tsx  Docs.tsx  Explorer.tsx  Home.tsx
scripts/: README.md  deploy.sh  onchain-helper.cmd  onchain-helper.sh  seed_wallets.sh  testScenarios.js
scripts/datums/: campaign-datum.template.json
scripts/redeemers/: submit-evidence-redeemer.json
services/: chainService.ts  geminiService.ts
